--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cradle & Pallet Dashboard - Updatable v3</title>
+    <title>Cradle & Pallet Dashboard - Updatable v4</title>
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
     <style>
-        body {font-family: Arial, sans-serif; margin: 20px; line-height: 1.6; background: #f9f9f9;}
+        body {font-family: Arial, sans-serif; margin: 20px; line-height: 1.6; background: #f9f9f9; color: #333;}
         h1, h2 {color: #003087; text-align: center;}
-        table {border-collapse: collapse; width: 100%; margin: 25px 0;}
+        table {border-collapse: collapse; width: 100%; margin: 25px 0; background: white;}
         th, td {border: 1px solid #000; padding: 10px; text-align: center;}
         th {background-color: #003087; color: white;}
-        .total {font-weight: bold; background-color: #ddd;}
-        .upload {background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); margin: 20px 0; text-align: center;}
-        input[type="file"] {padding: 10px;}
-        #status {margin-top: 10px; font-weight: bold;}
-        @media print { .upload {display: none;} body {margin: 10mm;} }
+        .total {font-weight: bold; background-color: #e6f2ff;}
+        .upload {background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 15px rgba(0,0,0,0.1); margin: 20px 0; text-align: center;}
+        input[type="file"] {padding: 10px; font-size: 1em;}
+        #status {margin-top: 10px; font-weight: bold; color: green;}
+        @media print { .upload {display: none;} body {margin: 10mm; background: white;} }
     </style>
 </head>
 <body>
@@ -25,29 +25,27 @@
 
 <div class="upload">
     <h2>Upload nieuwe Excel (.xls of .xlsx)</h2>
-    <p>Selecteer je Logistiek-bestand</p>
+    <p>Selecteer je "Logistiek - Cradle behoefte" bestand</p>
     <input type="file" id="excelFile" accept=".xls,.xlsx" />
-    <p id="status">Oorspronkelijke data geladen</p>
+    <p id="status">Oorspronkelijke data geladen – upload een nieuwe voor update</p>
 </div>
 
 <div id="dashboardContent">
-    <!-- Wordt automatisch gevuld -->
+    <!-- Tabellen worden hier automatisch ingevuld -->
 </div>
 
 <script>
-// Oorspronkelijke data als fallback (je huidige Excel als tekst – plakken uit je bestand)
-const defaultText = `Ordernummer	Afleverdatum	Artikel	Artikelomschrijving	Aantal	Cradle behoefte	Cradle Type	Pallet behoefte	Pallet Type
-826507	18-11-2025	F926FR02/160	Basic Display 210 FR - 1,60 x 100 m	9,901	50	110/4	9	170x120
-// ... plak hier eventueel meer regels van je originele Excel als backup (tab-gescheiden)
-// Totale behoefte cradles en pallets t/m 29-12-2025			3,548			651`;
+// Fallback data (kleine subset zodat het dashboard altijd iets toont)
+const fallbackData = [
+    {date: "18-11-2025", cradle: 50, cradleType: "110/4", pallet: 9, palletType: "170x120"},
+    {date: "24-11-2025", cradle: 61, cradleType: "110/5", pallet: 8, palletType: "170x120"}
+    // In de praktijk wordt dit overschreven door je echte Excel
+];
 
-// Laad oorspronkelijke data bij openen
-window.onload = () => {
-    parseTextData(defaultText);
-    document.getElementById('status').innerHTML = 'Oorspronkelijke data geladen – upload een nieuwe voor update';
-};
+// Laad fallback bij openen
+window.onload = () => renderDashboard(fallbackData);
 
-// Upload handler
+// Excel upload handler
 document.getElementById('excelFile').addEventListener('change', function(e) {
     const file = e.target.files[0];
     if (!file) return;
@@ -57,71 +55,133 @@ document.getElementById('excelFile').addEventListener('change', function(e) {
     reader.onload = function(ev) {
         try {
             const data = ev.target.result;
-            const workbook = XLSX.read(data, {type: 'binary'}); // 'binary' werkt voor zowel .xls als .xlsx!
+            const workbook = XLSX.read(data, {type: 'binary'}); // Werkt voor .xls en .xlsx
             const sheet = workbook.Sheets[workbook.SheetNames[0]];
             const rows = XLSX.utils.sheet_to_json(sheet, {header: 1, defval: ""});
 
-            // Verwerk als tekst (tab-gescheiden rijen)
-            const textLines = rows.map(row => row.join('\t'));
-            parseTextData(textLines.join('\n'));
+            const processed = [];
+            let started = false;
+            for (const row of rows) {
+                if (row[0] && String(row[0]).includes('Ordernummer')) {
+                    started = true;
+                    continue;
+                }
+                if (!started || row.length < 9) continue;
+                processed.push({
+                    date: String(row[1] || '').trim(),
+                    cradle: parseInt(String(row[5] || '0').replace(/\./g, '')) || 0,
+                    cradleType: String(row[6] || 'Overig').trim(),
+                    pallet: parseInt(String(row[7] || '0').replace(/\./g, '')) || 0,
+                    palletType: String(row[8] || '').trim()
+                });
+            }
 
-            document.getElementById('status').innerHTML = `Succes! \( {file.name} geladen ( \){rows.length} rijen)`;
+            if (processed.length === 0) throw "Geen orders gevonden";
+
+            renderDashboard(processed);
+            document.getElementById('status').innerHTML = `Succes! ${processed.length} orders geladen uit ${file.name}`;
             document.getElementById('lastUpdate').innerText = new Date().toLocaleDateString('nl-NL');
         } catch (err) {
-            document.getElementById('status').innerHTML = 'Fout: ' + err + ' – probeer .xlsx of controleer bestand';
+            document.getElementById('status').innerHTML = '<span style="color:red;">Fout: ' + err + '</span>';
         }
     };
-    reader.readAsBinaryString(file); // readAsBinaryString voor .xls ondersteuning
+    reader.readAsBinaryString(file);
 });
 
-// Parse tekstdata (fallback + na upload)
-function parseTextData(text) {
-    const lines = text.trim().split('\n');
-    const data = [];
-    let started = false;
-    for (const line of lines) {
-        if (line.includes('Ordernummer')) { started = true; continue; }
-        if (!started || line.trim() === '' || line.includes('Totale')) continue;
-        const cols = line.split('\t');
-        if (cols.length < 9) continue;
-        data.push({
-            date: cols[1].trim(),
-            cradle: parseInt((cols[5] || '0').replace(/\./g, '')) || 0,
-            cradleType: (cols[6] || 'Overig').trim(),
-            pallet: parseInt((cols[7] || '0').replace(/\./g, '')) || 0,
-            palletType: (cols[8] || '').trim()
-        });
-    }
-
-    renderDashboard(data);
-}
-
-// renderDashboard functie (zelfde als vorige versies – blijft werken)
+// Volledige render functie met mooie tabellen
 function renderDashboard(data) {
     if (data.length === 0) {
-        document.getElementById('dashboardContent').innerHTML = '<p style="text-align:center; color:red;">Geen data gevonden – upload een bestand!</p>';
+        document.getElementById('dashboardContent').innerHTML = '<p style="text-align:center; color:red;">Geen data gevonden.</p>';
         return;
     }
 
-    // ... (de rest van de render code uit vorige versie – weken berekenen, tabellen bouwen, etc.)
-    // (Ik houd het hier kort, maar plak de volledige renderDashboard uit mijn vorige bericht)
+    // Bereken weken
+    const weekMap = {};
+    data.forEach(row => {
+        if (!row.date) return;
+        const parts = row.date.split('-');
+        if (parts.length !== 3) return;
+        const date = new Date(`\( {parts[2]}- \){parts[1].padStart(2,'0')}-${parts[0].padStart(2,'0')}`);
+        if (isNaN(date)) return;
+        const weekNum = getWeekNumber(date);
+        const yearWeek = `\( {date.getFullYear()}-W \){weekNum.toString().padStart(2,'0')}`;
+        if (!weekMap[yearWeek]) weekMap[yearWeek] = {cradles: {}, pallets: {}};
+        weekMap[yearWeek].cradles[row.cradleType] = (weekMap[yearWeek].cradles[row.cradleType] || 0) + row.cradle;
+        weekMap[yearWeek].pallets[row.palletType] = (weekMap[yearWeek].pallets[row.palletType] || 0) + row.pallet;
+    });
 
-    // Voor nu een eenvoudige totaalweergave als placeholder
+    const sortedWeeks = Object.keys(weekMap).sort();
+
+    const cradleTypes = [...new Set(data.map(r => r.cradleType))].filter(Boolean).sort();
+    const palletTypes = [...new Set(data.map(r => r.palletType))].filter(Boolean).sort((a,b) => {
+        const areaA = (a.split('x').reduce((x,y) => parseInt(x)*parseInt(y), 1) || 0);
+        const areaB = (b.split('x').reduce((x,y) => parseInt(x)*parseInt(y), 1) || 0);
+        return areaB - areaA;
+    });
+
     const totalCradles = data.reduce((s,r) => s + r.cradle, 0);
     const totalPallets = data.reduce((s,r) => s + r.pallet, 0);
-    let html = `<p style="text-align:center; font-size:1.2em;">
+
+    let html = `<p style="text-align:center; font-size:1.3em;">
         Totale cradlebehoefte: <strong>${totalCradles.toLocaleString('nl')}</strong> • 
         Totale palletbehoefte: <strong>${totalPallets.toLocaleString('nl')}</strong>
-    </p><p style="text-align:center;">${data.length} orders verwerkt – volledige tabellen volgen in volgende update!</p>`;
+    </p>`;
+
+    // Cradle tabel
+    html += `<h2>Cradlebehoefte per week – per type</h2><table><tr><th>Type</th>`;
+    sortedWeeks.forEach(w => html += `<th>${w.replace('-W',' week ')}</th>`);
+    html += `<th>TOTAAL</th></tr>`;
+
+    cradleTypes.forEach(type => {
+        html += `<tr><td><strong>${type}</strong></td>`;
+        let rowTotal = 0;
+        sortedWeeks.forEach(w => {
+            const val = weekMap[w].cradles[type] || 0;
+            html += `<td>${val}</td>`;
+            rowTotal += val;
+        });
+        html += `<td class="total">${rowTotal}</td></tr>`;
+    });
+
+    html += `<tr class="total"><td><strong>Totaal per week</strong></td>`;
+    sortedWeeks.forEach(w => {
+        const sum = Object.values(weekMap[w].cradles).reduce((a,b) => a+b, 0);
+        html += `<td><strong>${sum}</strong></td>`;
+    });
+    html += `<td><strong>${totalCradles}</strong></td></tr></table>`;
+
+    // Pallet tabel
+    html += `<h2>Palletbehoefte per week – per type</h2><table><tr><th>Type</th>`;
+    sortedWeeks.forEach(w => html += `<th>${w.replace('-W',' week ')}</th>`);
+    html += `<th>TOTAAL</th></tr>`;
+
+    palletTypes.forEach(type => {
+        html += `<tr><td><strong>${type}</strong></td>`;
+        let rowTotal = 0;
+        sortedWeeks.forEach(w => {
+            const val = weekMap[w].pallets[type] || 0;
+            html += `<td>${val}</td>`;
+            rowTotal += val;
+        });
+        html += `<td class="total">${rowTotal}</td></tr>`;
+    });
+
+    html += `<tr class="total"><td><strong>Totaal per week</strong></td>`;
+    sortedWeeks.forEach(w => {
+        const sum = Object.values(weekMap[w].pallets).reduce((a,b) => a+b, 0);
+        html += `<td><strong>${sum}</strong></td>`;
+    });
+    html += `<td><strong>${totalPallets}</strong></td></tr></table>`;
+
     document.getElementById('dashboardContent').innerHTML = html;
 }
 
-// getWeekNumber functie (zelfde als vorige)
+// ISO week nummer
 function getWeekNumber(d) {
     d = new Date(Date.UTC(d.getFullYear(), d.getMonth(), d.getDate()));
-    d.setUTCDate(d.getUTCDate() + 4 - (d.getUTCDay()||7));
-    const yearStart = new Date(Date.UTC(d.getUTCFullYear(),0,1));
-    return Math.ceil((((d - yearStart) / 86400000) + 1)/7);
+    d.setUTCDate(d.getUTCDate() + 4 - (d.getUTCDay() || 7));
+    const yearStart = new Date(Date.UTC(d.getUTCFullYear(), 0, 1));
+    return Math.ceil((((d - yearStart) / 86400000) + 1) / 7);
 }
 </script>
 
