--- a/index.html
+++ b/index.html
@@ -1,195 +1,223 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cradle & Pallet Dashboard - Final & Robust</title>
-    <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-    <style>
-        body {font-family: Arial, sans-serif; margin: 20px; line-height: 1.6; background: #f9f9f9; color: #333;}
-        h1, h2 {color: #003087; text-align: center;}
-        table {border-collapse: collapse; width: 100%; margin: 25px 0; background: white;}
-        th, td {border: 1px solid #000; padding: 10px; text-align: center;}
-        th {background-color: #003087; color: white;}
-        .total {font-weight: bold; background-color: #e6f2ff;}
-        .upload {background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 15px rgba(0,0,0,0.1); margin: 20px 0; text-align: center;}
-        input[type="file"] {padding: 10px; font-size: 1em;}
-        #status {margin-top: 10px; font-weight: bold; color: green;}
-        @media print { .upload {display: none;} body {margin: 10mm; background: white;} }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pallet & Cradle Behoefte Dashboard</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f6f9;
+      margin: 0;
+      padding: 20px;
+      color: #333;
+    }
+    h1 {
+      text-align: center;
+      color: #2c3e50;
+    }
+    .container {
+      max-width: 1000px;
+      margin: 0 auto;
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    .upload-area {
+      border: 3px dashed #3498db;
+      border-radius: 10px;
+      padding: 40px;
+      text-align: center;
+      margin-bottom: 30px;
+      background: #ecf0f1;
+      transition: background 0.3s;
+    }
+    .upload-area:hover {
+      background: #d6e6f5;
+    }
+    .upload-area input {
+      margin-top: 15px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+    th {
+      background: #3498db;
+      color: white;
+      padding: 12px;
+      text-align: left;
+    }
+    td {
+      padding: 10px 12px;
+      border-bottom: 1px solid #ddd;
+    }
+    tr:nth-child(even) {
+      background: #f9f9f9;
+    }
+    .total-row {
+      font-weight: bold;
+      background: #2c3e50 !important;
+      color: white;
+      font-size: 1.1em;
+    }
+    .info {
+      text-align: center;
+      color: #7f8c8d;
+      margin: 20px 0;
+    }
+    .error {
+      color: #e74c3c;
+      font-weight: bold;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
+  <div class="container">
+    <h1>Pallet & Cradle Behoefte Dashboard</h1>
 
-<h1>LOGISTIEK DASHBOARD – CRADLE & PALLET BEHOEFTE</h1>
-<p style="text-align:center;"><strong>Laatste update:</strong> <span id="lastUpdate">nog geen bestand geüpload</span></p>
+    <div class="upload-area">
+      <p><strong>Upload je Excel-bestand (.xls of .xlsx)</strong></p>
+      <p>Bijv: Logistiek - Pallet behoefte.xls</p>
+      <input type="file" id="fileInput" accept=".xls,.xlsx" />
+    </div>
 
-<div class="upload">
-    <h2>Upload nieuwe Excel (.xls of .xlsx)</h2>
-    <p>Selecteer je "Logistiek - Pallet behoefte" bestand</p>
-    <input type="file" id="excelFile" accept=".xls,.xlsx" />
-    <p id="status">Upload een bestand om het dashboard bij te werken</p>
-</div>
+    <div id="output"></div>
+  </div>
 
-<div id="dashboardContent">
-    <p style="text-align:center; color:#666;">Upload een Excel-bestand om het dashboard te zien.</p>
-</div>
+  <script>
+    document.getElementById('fileInput').addEventListener('change', function(e) {
+      const file = e.target.files[0];
+      if (!file) return;
 
-<script>
-// Excel upload handler
-document.getElementById('excelFile').addEventListener('change', function(e) {
-    const file = e.target.files[0];
-    if (!file) return;
-    document.getElementById('status').innerHTML = 'Bezig met lezen van ' + file.name + '...';
-
-    const reader = new FileReader();
-    reader.onload = function(ev) {
+      const reader = new FileReader();
+      reader.onload = function(e) {
         try {
-            const data = ev.target.result;
-            const workbook = XLSX.read(data, {type: 'binary'});
-            const sheet = workbook.Sheets[workbook.SheetNames[0]];
-            const rows = XLSX.utils.sheet_to_json(sheet, {header: 1, defval: "", range: 0});
+          const data = new Uint8Array(e.target.result);
+          const workbook = XLSX.read(data, { type: 'array' });
+          const sheet = workbook.Sheets[workbook.SheetNames[0]];
+          const json = XLSX.utils.sheet_to_json(sheet, { header: 1 });
 
-            const processed = [];
-            let headerFound = false;
+          // Zoek header rij
+          let headerRow = -1;
+          const requiredCols = ["Ordernummer", "Afleverdatum", "Artikel", "Artikelomschrijving",
+                                "Aantal", "Cradle behoefte", "Cradle Type", "Pallet behoefte", "Pallet Type"];
 
-            for (const row of rows) {
-                if (row.length === 0) continue;
-
-                // Zoek de header rij met "Ordernummer"
-                const orderCell = String(row[0] || '').trim();
-                if (orderCell.includes('Ordernummer')) {
-                    headerFound = true;
-                    continue;
-                }
-
-                // Alleen rijen na header, en met een geldig ordernummer (begint met cijfers)
-                if (!headerFound) continue;
-                if (!orderCell.match(/^\d{6,}/)) continue; // Ordernummer begint met 6+ cijfers
-
-                // Kolommen: 0=Ordernummer, 1=Afleverdatum, 5=Cradle behoefte, 6=Cradle Type, 7=Pallet behoefte, 8=Pallet Type
-                const date = String(row[1] || '').trim();
-                if (!date.match(/^\d{2}-\d{2}-\d{4}$/)) continue; // geldige datum
-
-                const cradleRaw = String(row[5] || '0').replace(/[^\d-]/g, '');
-                const palletRaw = String(row[7] || '0').replace(/[^\d-]/g, '');
-
-                processed.push({
-                    date: date,
-                    cradle: parseInt(cradleRaw) || 0,
-                    cradleType: String(row[6] || 'Overig').trim(),
-                    pallet: parseInt(palletRaw) || 0,
-                    palletType: String(row[8] || '').trim()
-                });
+          for (let i = 0; i < json.length; i++) {
+            const row = json[i].map(cell => (cell || "").toString().trim());
+            if (requiredCols.every(col => row.includes(col))) {
+              headerRow = i;
+              break;
             }
+          }
 
-            if (processed.length === 0) {
-                throw "Geen geldige orders gevonden. Controleer of het bestand de juiste structuur heeft.";
+          if (headerRow === -1) {
+            throw new Error("Kolomnamen niet gevonden. Zorg dat de kolommen exact overeenkomen met de originele namen.");
+          }
+
+          // Maak header mapping
+          const headers = json[headerRow];
+          const colIndices = {};
+          requiredCols.forEach(col => {
+            const idx = headers.indexOf(col);
+            if (idx !== -1) colIndices[col] = idx;
+          });
+
+          // Verzamel data rijen
+          const rows = [];
+          for (let i = headerRow + 1; i < json.length; i++) {
+            const row = json[i];
+            if (!row || row.length === 0) continue;
+
+            const palletType = row[colIndices["Pallet Type"]];
+            const ordernummer = row[colIndices["Ordernummer"]];
+            if (!palletType && !ordernummer) continue; // skip subtotaal rijen
+
+            rows.push({
+              ordernummer: ordernummer || "",
+              palletType: palletType || "",
+              cradle: parseInt(row[colIndices["Cradle behoefte"]] || 0),
+              pallet: parseInt(row[colIndices["Pallet behoefte"]] || 0)
+            });
+          }
+
+          // Groepeer per Pallet Type
+          const grouped = {};
+          const ordersPerType = {};
+          rows.forEach(r => {
+            if (!grouped[r.palletType]) {
+              grouped[r.palletType] = { cradles: 0, pallets: 0 };
+              ordersPerType[r.palletType] = new Set();
             }
+            grouped[r.palletType].cradles += r.cradle;
+            grouped[r.palletType].pallets += r.pallet;
+            if (r.ordernummer) ordersPerType[r.palletType].add(r.ordernummer);
+          });
 
-            renderDashboard(processed);
-            document.getElementById('status').innerHTML = `Succes! ${processed.length} orders geladen uit ${file.name}`;
-            document.getElementById('lastUpdate').innerText = new Date().toLocaleDateString('nl-NL');
+          // Sorteer op palletType
+          const sortedTypes = Object.keys(grouped).sort();
+
+          // Bouw HTML tabel
+          let html = `
+            <div class="info">
+              Bestand: <strong>${file.name}</strong> • Verwerkt op: ${new Date().toLocaleString('nl-NL')}
+            </div>
+            <table>
+              <thead>
+                <tr>
+                  <th>Pallet Type</th>
+                  <th>Aantal Orders</th>
+                  <th>Totale Cradles</th>
+                  <th>Totale Pallets</th>
+                </tr>
+              </thead>
+              <tbody>`;
+
+          let totalOrders = 0;
+          let totalCradles = 0;
+          let totalPallets = 0;
+
+          sortedTypes.forEach(type => {
+            const countOrders = ordersPerType[type].size;
+            const cradles = grouped[type].cradles;
+            const pallets = grouped[type].pallets;
+
+            totalOrders += countOrders;
+            totalCradles += cradles;
+            totalPallets += pallets;
+
+            html += `
+              <tr>
+                <td><strong>${type || 'Onbekend'}</strong></td>
+                <td>${countOrders}</td>
+                <td>${cradles}</td>
+                <td>${pallets}</td>
+              </tr>`;
+          });
+
+          html += `
+              <tr class="total-row">
+                <td>TOTAAL</td>
+                <td>${totalOrders}</td>
+                <td>${totalCradles}</td>
+                <td>${totalPallets}</td>
+              </tr>
+            </tbody>
+          </table>`;
+
+          document.getElementById('output').innerHTML = html;
+
         } catch (err) {
-            document.getElementById('status').innerHTML = '<span style="color:red;">Fout: ' + err + '</span>';
-            console.error(err);
+          document.getElementById('output').innerHTML = `<p class="error">Fout: ${err.message}</p>`;
+          console.error(err);
         }
-    };
-    reader.readAsBinaryString(file);
-});
-
-// Render functie
-function renderDashboard(data) {
-    const weekMap = {};
-    data.forEach(row => {
-        const parts = row.date.split('-');
-        const d = parseInt(parts[0]);
-        const m = parseInt(parts[1]);
-        const y = parseInt(parts[2]);
-        const date = new Date(y, m - 1, d);
-        const weekNum = getWeekNumber(date);
-        const yearWeek = `${y}-W${String(weekNum).padStart(2, '0')}`;
-        if (!weekMap[yearWeek]) weekMap[yearWeek] = {cradles: {}, pallets: {}};
-        weekMap[yearWeek].cradles[row.cradleType] = (weekMap[yearWeek].cradles[row.cradleType] || 0) + row.cradle;
-        weekMap[yearWeek].pallets[row.palletType] = (weekMap[yearWeek].pallets[row.palletType] || 0) + row.pallet;
+      };
+      reader.readAsArrayBuffer(file);
     });
-
-    const sortedWeeks = Object.keys(weekMap).sort();
-
-    const cradleTypes = [...new Set(data.map(r => r.cradleType))].filter(Boolean).sort();
-    const palletTypes = [...new Set(data.map(r => r.palletType))].filter(Boolean).sort((a, b) => {
-        const area = t => {
-            const nums = t.split('x').map(n => parseInt(n) || 0);
-            return nums[0] * nums[1];
-        };
-        return area(b) - area(a);
-    });
-
-    const totalCradles = data.reduce((s, r) => s + r.cradle, 0);
-    const totalPallets = data.reduce((s, r) => s + r.pallet, 0);
-
-    let html = `<p style="text-align:center; font-size:1.3em;">
-        Totale cradlebehoefte: <strong>${totalCradles.toLocaleString('nl')}</strong> • 
-        Totale palletbehoefte: <strong>${totalPallets.toLocaleString('nl')}</strong>
-    </p>`;
-
-    // Cradle tabel
-    html += `<h2>Cradlebehoefte per week – per type</h2><table><tr><th>Type</th>`;
-    sortedWeeks.forEach(w => html += `<th>${w.replace('-W', ' week ')}</th>`);
-    html += `<th>TOTAAL</th></tr>`;
-
-    cradleTypes.forEach(type => {
-        html += `<tr><td><strong>${type}</strong></td>`;
-        let rowTotal = 0;
-        sortedWeeks.forEach(w => {
-            const val = weekMap[w].cradles[type] || 0;
-            html += `<td>${val}</td>`;
-            rowTotal += val;
-        });
-        html += `<td class="total">${rowTotal}</td></tr>`;
-    });
-
-    html += `<tr class="total"><td><strong>Totaal per week</strong></td>`;
-    sortedWeeks.forEach(w => {
-        const sum = Object.values(weekMap[w].cradles).reduce((a, b) => a + b, 0);
-        html += `<td><strong>${sum}</strong></td>`;
-    });
-    html += `<td><strong>${totalCradles}</strong></td></tr></table>`;
-
-    // Pallet tabel
-    html += `<h2>Palletbehoefte per week – per type</h2><table><tr><th>Type</th>`;
-    sortedWeeks.forEach(w => html += `<th>${w.replace('-W', ' week ')}</th>`);
-    html += `<th>TOTAAL</th></tr>`;
-
-    palletTypes.forEach(type => {
-        html += `<tr><td><strong>${type}</strong></td>`;
-        let rowTotal = 0;
-        sortedWeeks.forEach(w => {
-            const val = weekMap[w].pallets[type] || 0;
-            html += `<td>${val}</td>`;
-            rowTotal += val;
-        });
-        html += `<td class="total">${rowTotal}</td></tr>`;
-    });
-
-    html += `<tr class="total"><td><strong>Totaal per week</strong></td>`;
-    sortedWeeks.forEach(w => {
-        const sum = Object.values(weekMap[w].pallets).reduce((a, b) => a + b, 0);
-        html += `<td><strong>${sum}</strong></td>`;
-    });
-    html += `<td><strong>${totalPallets}</strong></td></tr></table>`;
-
-    document.getElementById('dashboardContent').innerHTML = html;
-}
-
-// ISO week nummer
-function getWeekNumber(d) {
-    const date = new Date(d);
-    date.setHours(0, 0, 0, 0);
-    date.setDate(date.getDate() + 4 - (date.getDay() || 7));
-    const yearStart = new Date(date.getFullYear(), 0, 1);
-    return Math.ceil((((date - yearStart) / 86400000) + 1) / 7);
-}
-</script>
-
+  </script>
 </body>
 </html>
